hphp/test/zend/good/ext/gd/tests/colorat.php.skipif
<?php
        if (!function_exists('imagecolorat')) die("skip gd extension not available\n");
?>