hphp/test/zend/bad/ext/gd/tests/imageloadfont_invalid.php.skipif
<?php 
	if (!extension_loaded('gd')) die("skip gd extension not available\n"); 
?>